--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <base href="/">
     <link rel="manifest" href="manifest.webmanifest">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
   <body>
     <app-root>Loading...</app-root>
